--- a/MyHome/app/src/main/res/layout/profile_edit.xml
+++ b/MyHome/app/src/main/res/layout/profile_edit.xml
@@ -65,6 +65,7 @@
 
             <TextView
                 android:id="@+id/gender_label"
+                style="@style/tradeGothicLTStd_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-light"
@@ -210,6 +211,7 @@
 
             <TextView
                 android:id="@+id/email_label"
+                style="@style/tradeGothicLTStd_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/profile_label_marginTop"
@@ -217,6 +219,7 @@
 
             <TextView
                 android:id="@+id/email"
+                style="@style/tradeGothicLTStd_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="kwelsh@prokarma.com"
@@ -225,6 +228,7 @@
 
             <TextView
                 android:id="@+id/email_notice"
+                style="@style/tradeGothicLTStd_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/profile_label_marginTop"
