--- a/MyHome/app/src/main/res/values/colors.xml
+++ b/MyHome/app/src/main/res/values/colors.xml
@@ -40,7 +40,7 @@
     <color name="green">#009933</color>
     <color name="pink">#da3172</color>
     <color name="purple">#800080</color>
-    <color name="red">#FF3300</color>
+    <color name="red">#AA272F</color>
     <color name="orange">#FF6600</color>
     <color name="yellow">#FFFF00</color>
     <color name="grey">#707070</color>
