--- a/MyHome/app/src/main/res/layout/fragment_provider_details.xml
+++ b/MyHome/app/src/main/res/layout/fragment_provider_details.xml
@@ -4,7 +4,13 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context="com.dignityhealth.myhome.features.fad.details.ProviderDetailsFragment">
 
+        <TextView
+            android:text="Details"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </FrameLayout>
 </layout>
