--- a/MyHome/app/src/main/res/layout/fragment_fad.xml
+++ b/MyHome/app/src/main/res/layout/fragment_fad.xml
@@ -6,25 +6,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/searchDoctor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableRight="@android:drawable/ic_menu_search"
-            android:gravity="top"
-            android:hint="@string/fad_search_hint"
-            android:imeOptions="actionSearch"
-            android:inputType="text"
-            android:lines="1"
-            android:maxLines="1"
-            android:padding="16dp" />
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/providersList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/searchDoctor"
-            android:layout_gravity="center"
             android:visibility="gone" />
 
         <TextView
@@ -42,6 +27,13 @@
             android:layout_centerInParent="true"
             android:layout_marginBottom="8dp"
             android:indeterminate="true"
+            android:visibility="gone" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/suggestionList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
             android:visibility="gone" />
     </RelativeLayout>
 </layout>
