--- a/MyHome/app/src/main/res/values/colors.xml
+++ b/MyHome/app/src/main/res/values/colors.xml
@@ -366,12 +366,14 @@
     1px solid #484B4D
     <!--blue grey-->
     <color name="md_blue_grey_50">#ECEFF1</color>
+    <color name="md_blue_grey_80">#D9D9D9</color>
     <color name="md_blue_grey_100">#CFD8DC</color>
     <color name="md_blue_grey_200">#B0BBC5</color>
     <color name="md_blue_grey_300">#90A4AE</color>
     <color name="md_blue_grey_400">#78909C</color>
     <color name="md_blue_grey_500">#607D8B</color>
     <color name="md_blue_grey_600">#546E7A</color>
+    <color name="md_blue_grey_680">#4D525A</color>
     <color name="md_blue_grey_650">#484B4D</color>
     <color name="md_blue_grey_700">#455A64</color>
     <color name="md_blue_grey_800">#37474F</color>
