--- a/MyHome/app/src/main/res/layout/tos.xml
+++ b/MyHome/app/src/main/res/layout/tos.xml
@@ -6,8 +6,8 @@
     <TextView
         android:id="@+id/terms_of_service"
         android:layout_width="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_marginTop="16dp"
         android:text="Terms of Service" />
 
@@ -20,6 +20,7 @@
         android:visibility="gone" />
 
     <RelativeLayout
+        android:id="@+id/tc_button_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
