--- a/MyHome/app/src/main/res/layout/appointments.xml
+++ b/MyHome/app/src/main/res/layout/appointments.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical">
 
     <Button
@@ -11,6 +10,7 @@
         android:layout_width="255dp"
         android:layout_height="45dp"
         android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
         android:layout_margin="@dimen/profile_label_marginTop"
         android:text="@string/book_appointment" />
 
@@ -18,5 +18,14 @@
         android:id="@+id/list_appointments"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <ProgressBar
+        android:id="@+id/appointments_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:indeterminate="true"
+        android:visibility="gone" />
 
 </LinearLayout>
