--- a/MyHome/app/src/main/res/layout/tos.xml
+++ b/MyHome/app/src/main/res/layout/tos.xml
@@ -3,14 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/terms_of_service"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="16dp"
-        android:text="Terms of Service" />
-
     <ProgressBar
         android:id="@+id/terms_progress"
         android:layout_width="wrap_content"
@@ -50,4 +42,12 @@
             android:text="Accept"
             android:textColor="@color/white" />
     </RelativeLayout>
+
+    <WebView
+        android:id="@+id/terms_of_service"
+        android:layout_width="wrap_content"
+        android:layout_above="@id/tc_button_bar"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="16dp" />
 </RelativeLayout>
