--- a/MyHome/app/src/main/res/layout/toolbar_white.xml
+++ b/MyHome/app/src/main/res/layout/toolbar_white.xml
@@ -1,9 +1,11 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
+    style="@style/tradeGothicLTStd_20"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="?android:attr/actionBarSize"
     android:background="@android:color/transparent"
     android:elevation="7dp"
     android:fitsSystemWindows="true"
+    android:titleTextColor="@color/md_blue_grey_650"
     app:theme="@style/ToolBarTheme.ToolBarStyle.Light" />
