Added in developer settings. This can be turned on/off via the SHOW_SETTINGS value in our build gradle

--- a/MyHome/app/src/main/res/menu/toolbar_menu.xml
+++ b/MyHome/app/src/main/res/menu/toolbar_menu.xml
@@ -33,6 +33,13 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/developer"
+        android:icon="@android:drawable/ic_menu_agenda"
+        android:title="Developer"
+        android:visible="false"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/sign_out"
         android:icon="@android:drawable/ic_menu_agenda"
         android:title="Sign Out"
