--- a/MyHome/app/src/main/res/layout/appointment_item.xml
+++ b/MyHome/app/src/main/res/layout/appointment_item.xml
@@ -4,12 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="6dp"
+    android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
     android:minHeight="48dp">
 
     <ImageView
         android:id="@+id/doctor_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="false"
         android:src="@mipmap/logo" />
 
     <TextView
