Filter location and visuals

--- a/MyHome/app/src/main/res/menu/fad_menu.xml
+++ b/MyHome/app/src/main/res/menu/fad_menu.xml
@@ -14,4 +14,10 @@
         android:icon="@mipmap/filter_blue"
         android:title="Filter"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/fad_more"
+        android:icon="@mipmap/more"
+        android:title="Filter"
+        app:showAsAction="always" />
 </menu>
