--- a/MyHome/app/src/main/res/layout/fragment_filter.xml
+++ b/MyHome/app/src/main/res/layout/fragment_filter.xml
@@ -1,26 +1,87 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ScrollView
+    <data>
+
+        <variable
+            name="handlers"
+            type="com.dignityhealth.myhome.features.fad.filter.FilterDialog.DialogClick" />
+    </data>
+
+    <ScrollView xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <include
-                android:id="@+id/toolbarWhite"
-                layout="@layout/toolbar_white" />
+            <RelativeLayout
+                android:id="@+id/titleBar"
+                android:layout_width="match_parent"
+                android:layout_height="58dp"
+                android:layout_alignParentTop="true">
+
+                <ImageView
+                    android:id="@+id/dialog_close"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:onClick="@{handlers::onClickEvent}"
+                    android:padding="16dp"
+                    android:src="@mipmap/xblue" />
+
+                <TextView
+                    style="@style/tradeGothicLTStd_20"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:layout_toRightOf="@+id/dialog_close"
+                    android:gravity="center_vertical"
+                    android:text="Find Care" />
+
+                <TextView
+                    android:id="@+id/save_filter"
+                    style="@style/tradeGothicLTStd_13"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:gravity="center_vertical"
+                    android:onClick="@{handlers::onClickEvent}"
+                    android:padding="16dp"
+                    android:text="Save"
+                    android:textAllCaps="true"
+                    android:textColor="@color/accent" />
+            </RelativeLayout>
 
             <View
+                android:id="@+id/titleBarSeparator"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
+                android:layout_below="@+id/titleBar"
                 android:background="@color/md_blue_grey_650" />
 
-            <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+            <EditText
+                android:id="@+id/filterLocation"
+                style="@style/tradeGothicLTStd_18"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/titleBarSeparator"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:drawableLeft="@mipmap/map_icon_blue"
+                android:drawablePadding="8dp"
+                android:imeOptions="actionDone"
+                android:maxLines="1"
+                android:text="Current Location" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/filterLocation"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
@@ -43,7 +104,7 @@
                     android:orientation="horizontal"
                     android:weightSum="3">
 
-                    <Button
+                    <RadioButton
                         android:id="@+id/distance"
                         style="@style/tradeGothicLTStd_14"
                         android:layout_width="match_parent"
@@ -51,12 +112,14 @@
                         android:layout_margin="4dp"
                         android:layout_weight="1"
                         android:background="@drawable/button_boarder_acent"
+                        android:button="@null"
                         android:text="Distance"
+                        android:textAlignment="center"
                         android:textAllCaps="false"
                         android:textColor="@color/accent"
                         android:textStyle="bold" />
 
-                    <Button
+                    <RadioButton
                         android:id="@+id/bestMatch"
                         style="@style/tradeGothicLTStd_14"
                         android:layout_width="match_parent"
@@ -64,12 +127,14 @@
                         android:layout_margin="4dp"
                         android:layout_weight="1"
                         android:background="@drawable/button_boarder_acent"
+                        android:button="@null"
                         android:text="Best Match"
+                        android:textAlignment="center"
                         android:textAllCaps="false"
                         android:textColor="@color/accent"
                         android:textStyle="bold" />
 
-                    <Button
+                    <RadioButton
                         android:id="@+id/lastName"
                         style="@style/tradeGothicLTStd_14"
                         android:layout_width="match_parent"
@@ -77,7 +142,9 @@
                         android:layout_margin="4dp"
                         android:layout_weight="1"
                         android:background="@drawable/button_boarder_acent"
+                        android:button="@null"
                         android:text="Last Name"
+                        android:textAlignment="center"
                         android:textAllCaps="false"
                         android:textColor="@color/accent"
                         android:textStyle="bold" />
@@ -102,6 +169,7 @@
                     android:orientation="horizontal">
 
                     <android.support.v7.widget.SwitchCompat
+                        android:id="@+id/newPatientsSwitch"
                         style="@style/tradeGothicLTStd_18"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -119,7 +187,7 @@
                 <ExpandableListView
                     android:id="@+id/expandableList"
                     android:layout_width="match_parent"
-                    android:layout_height="320dp"
+                    android:layout_height="325dp"
                     android:layout_below="@+id/newPatients"
                     android:layout_marginTop="16dp"
                     android:groupIndicator="@null"
@@ -151,6 +219,16 @@
                 </LinearLayout>
 
             </RelativeLayout>
-        </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/locationSugg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/filterLocation"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@color/white"
+                android:visibility="gone" />
+        </RelativeLayout>
     </ScrollView>
 </layout>
