--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -61,6 +61,10 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="tradeGothicLTStd_13" parent="tradeGothicLTStd">
+        <item name="android:textSize">13sp</item>
+    </style>
+
     <style name="tradeGothicLTStd_14" parent="tradeGothicLTStd">
         <item name="android:textSize">14sp</item>
     </style>
