--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -67,12 +67,18 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <include
-            android:id="@+id/provider_details_pager"
-            layout="@layout/provider_details_pager"
+        <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/view_pager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/facility_address" />
+            android:layout_height="300dp"
+            android:layout_below="@id/facility_address">
+
+            <android.support.v4.view.PagerTabStrip
+                android:id="@+id/pager_strip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </android.support.v4.view.ViewPager>
 
     </RelativeLayout>
 </ScrollView>
