--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,7 +12,7 @@
         android:paddingStart="18dp"
         android:paddingTop="12dp">
 
-        <ImageView
+        <com.dignityhealth.myhome.views.CircularImageView
             android:id="@+id/doctor_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
@@ -47,6 +48,7 @@
             android:layout_height="45dp"
             android:layout_alignLeft="@id/doctor_name"
             android:layout_below="@id/speciality"
+            android:layout_marginTop="18dp"
             android:text="@string/book_appointment" />
 
         <FrameLayout
@@ -54,6 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_below="@id/book_appointment"
+            android:layout_marginTop="24dp"
             android:background="@color/blazing_purple" />
 
         <TextView
@@ -62,23 +65,42 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/map"
+            android:layout_marginTop="12dp"
             android:gravity="center"
             android:text="170 Alameda de las Pulgas\nRedwood City, CA 94062"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="20sp" />
 
-        <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/view_pager"
+        <View
+            android:id="@+id/divider"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_below="@id/facility_address">
+            android:layout_height="2dp"
+            android:layout_below="@id/facility_address"
+            android:layout_marginTop="12dp"
+            android:background="@color/beige" />
 
-            <android.support.v4.view.PagerTabStrip
-                android:id="@+id/pager_strip"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/divider"
+            android:layout_marginTop="28dp"
+            android:minHeight="300dp"
+            android:orientation="vertical">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/sliding_tabs"
+                style="@style/tradeGothicLTStd_14"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                app:tabIndicatorColor="@color/primary"
+                app:tabIndicatorHeight="3dp"
+                app:tabMode="fixed" />
 
-        </android.support.v4.view.ViewPager>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="0px"
+                android:layout_weight="1" />
+        </LinearLayout>
 
     </RelativeLayout>
 </ScrollView>
