--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -80,10 +80,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/divider"
             android:layout_marginTop="28dp"
-            android:minHeight="300dp"
+            android:minHeight="500dp"
             android:orientation="vertical">
 
             <android.support.design.widget.TabLayout
