--- a/MyHome/app/src/main/res/layout/provider_details_education.xml
+++ b/MyHome/app/src/main/res/layout/provider_details_education.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/education_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/red"
-    android:orientation="vertical">
-
-</LinearLayout>
+    android:padding="18dp" />
