--- a/MyHome/app/src/main/res/layout/provider_details_experience.xml
+++ b/MyHome/app/src/main/res/layout/provider_details_experience.xml
@@ -6,6 +6,7 @@
     android:padding="18dp">
 
     <TextView
+        android:id="@+id/certifications_label"
         style="@style/tradeGothicLTStd_14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,6 +23,7 @@
         android:textSize="18sp" />
 
     <TextView
+        android:id="@+id/awards_label"
         style="@style/tradeGothicLTStd_14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
