--- a/MyHome/app/src/main/res/layout/provider_details_profile.xml
+++ b/MyHome/app/src/main/res/layout/provider_details_profile.xml
@@ -12,6 +12,7 @@
             android:id="@+id/label_accepting_new_patients"
             style="@style/tradeGothicLTStd_14"
             android:layout_width="wrap_content"
+            android:maxWidth="200dp"
             android:layout_height="wrap_content"
             android:text="Accepting New Patients"
             android:textSize="20sp"
@@ -49,6 +50,7 @@
         <TextView
             android:id="@+id/label_gender"
             style="@style/tradeGothicLTStd_14"
+            android:maxWidth="200dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/accepting_new_patients"
@@ -73,8 +75,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@id/languages"
-            android:layout_marginTop="24dp"
             android:text="Experience"
+            android:layout_alignTop="@id/label_gender"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -114,7 +116,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/philosophy"
-            android:layout_marginTop="24dp"
             android:text="Locations"
             android:textSize="20sp"
             android:textStyle="bold" />
